fixed slide flicker issue

--- a/src/webparts/verticalMarquee/components/VerticalMarquee.module.scss
+++ b/src/webparts/verticalMarquee/components/VerticalMarquee.module.scss
@@ -17,12 +17,8 @@
 
 .scrollContainer {
   height: 100%;
-  overflow: none;
+  overflow: hidden;
   position: relative;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  display: flex;
 }
 
 .scrollWrapper {
